fixed product window size and text alignment

--- a/src/frontend/public/styles/main.scss
+++ b/src/frontend/public/styles/main.scss
@@ -29,6 +29,10 @@
   box-sizing: border-box;
 }
 
+div#swal2-html-container.swal2-html-container {
+  text-align: justify;
+}
+
 hr {
   width: calc(120px + 50%);
   color: rgba(0, 0, 0, 0.3);
